	  support/regression/tests/bug-3117729.c,
	  support/regression/tests/bug-3495411.c,
	  support/regression/tests/bug-499644.c,
	  support/regression/tests/bug-500536.c,
	  support/regression/tests/bug-716242.c,
	  support/regression/tests/bug1551947.c,
	  support/regression/tests/bug1723128.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/bug2077267.c,
	  support/regression/tests/bug2094505.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* sdas/aspdk15/pdk15mch.c
	  Assembler fix, patch by Nicolas Lesser.
	* sim/ucsim/pdk.src/inst.cc,
	  sim/ucsim/pdk.src/pdk.cc,
	  sim/ucsim/pdk.src/regspdk.h:
	  Simulator fix, patch by Nicolas Lesser.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-2274.c:
	  Support dummy write for handling of uninitialized variables, better code for write of literal to bit-field.
	* sim/ucsim/pdk.src/inst.cc:
	  Fix dec m for pdk15.
	* support/regression/tests/bitfields.c,
	  support/regression/tests/bug-2181.c,
	  support/regression/tests/bug-2197.c,
	  support/regression/tests/bug-221100.c,
	  support/regression/tests/bug-221168.c,
	  support/regression/tests/bug-2305.c,
	  support/regression/tests/bug-2349.c,
	  support/regression/tests/bug-2357.c,
	  support/regression/tests/bug-2363.c,
	  support/regression/tests/bug-2373.c,
	  support/regression/tests/bug-2455.c,
	  support/regression/tests/bug-2497.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* sdas/linksrc/lkmain.c,
	  sdas/linksrc/lkrloc3.c,
	  sdas/linksrc/sdld.c,
	  sdas/linksrc/sdld.h:
	  Fix bug #2896, patch by Nicolas Lesser.
	* src/pdk/main.c:
	  Enable peephole optimizer for pdk13, pdk15.
	* sim/ucsim/pdk.src/inst.cc:
	  Fix and m, a, patch by Nicolas Lesser.

2019-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk15/pdk15mch.c,
	  sdas/asxxsrc/asout.c,
	  sdas/linksrc/lkrloc3.c: