@@ -4,7 +4,7 @@
 
 #include <testfwk.h>
 
-#ifndef __SDCC_pdk14 // Lack of memory
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
 float mult(float x)
 {
   return 0.8 * x;
@@ -14,7 +14,7 @@ float mult(float x)
 void
 testBug (void)
 {
-#ifndef __SDCC_pdk14 // Lack of memory
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
   unsigned char i = 64;
   float result = 1e-38;
 
