@@ -32,7 +32,7 @@
 #  define XDATA
 #endif
 
-#if !defined(__SDCC_pdk14) // Lack of memory
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
 XDATA volatile float left, right, result;
 
 struct {
@@ -93,7 +93,7 @@ compare (float is, float should)
 void
 testFloatMath (void)
 {
-#if !defined(__SDCC_pdk14) // Lack of memory
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
   int i;
   int t = sizeof (cases) / sizeof (cases[0]);
   float result;
@@ -138,7 +138,7 @@ testFloatMath (void)
 void
 testFloatMulRound (void)
 {
-#if !defined(__SDCC_pdk14) // Lack of memory
+#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Lack of memory
     right = 2.0 / 10.61;
     result = 10.61 * right;
     compare (result, 2.0);
